# rarog

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  build.rs  tuned_params.txt  user_dev_guide.md
.cargo/: config.toml
.github/workflows/: build.yml
benches/: board.rs
src/: bench.rs  engine.rs  engine_command.rs  eval.rs  kpk.rs  lib.rs  main.rs  move_ordering.rs  params.rs  search.rs  search_options.rs  search_threads.rs  syzygy.rs  time_manager.rs  tt.rs  tune.rs  uci_protocol.rs
src/board/: attacks.rs  board.rs  movegen.rs  moves.rs  zobrist.rs
tests/: board_correctness.rs  board_performance.rs  endgames.epd  endgames.rs  engine_coverage.rs  eval_cache.rs  eval_invariants.rs  search_strength.rs  uci_process.rs
tools/: build_test.ps1  datagen.ps1  gauntlet.ps1  setup_spsa.ps1  setup_tools.ps1  sprt.ps1  spsa.py
tools/books/: SuperGM_4mvs.pgn
tools/spsa_configs/: README.md  config_futility.json  config_lazymargin.json  config_lmr.json  config_probcut.json  config_pruning.json  config_tm.json  cutechess.json  phase1_lmr.json  phase1_pruning.json  spsa.json
tools/texel/: README.md  bake_params.py  extract.py  import_beast.py  sample_fens.py
tools/texel-tuner/: Cargo.toml
tools/texel-tuner/src/: main.rs
tools/texel/reference/: basilisk_tuner.cpp
tools/tune/: Cargo.toml
tools/tune/src/: main.rs
xtask/src/: main.rs
