[package]
name = "rarog"
authors = ["Miloslav Macurek"]
version = "2.1.0"
edition = "2024"
description = "A UCI-compatible chess engine written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/maelic13/rarog"
readme = "README.md"

[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable the SPSA/Texel tuning infrastructure.  When active, EvalParams and
# SearchParams are loaded at runtime from a file path given by the
# RAROG_TUNE_FILE / RAROG_SEARCH_TUNE_FILE environment variables instead of
# using the compile-time defaults.  This does NOT ship any new UCI options.
tune = []

[dependencies]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "board"
harness = false
