[package]
name = "rarog"
authors = ["Miloslav Macurek"]
version = "2.1.0"
edition = "2024"
description = "A UCI-compatible chess engine written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/maelic13/rarog"
readme = "README.md"

[workspace]
members = [".", "xtask"]
default-members = ["."]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Exposes all SearchParams as UCI spin options for SPSA tuning via weather-factory.
# Production builds must NOT use this feature — it pollutes the UCI option list shown
# to GUIs. Only used when running tools/spsa_configs/ tuning workflows.
# Build: cargo xtask build --arch pext --pgo (+ add --features tune to the xtask or
# pass CARGO_ENCODED_RUSTFLAGS directly if needed).
tune = []

[dependencies]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[[bench]]
name = "board"
harness = false
